change logic slide js and change color

--- a/public/assets/css/bootstrap/bootstrap.css
+++ b/public/assets/css/bootstrap/bootstrap.css
@@ -7940,7 +7940,7 @@ a.close.disabled
     opacity: .5;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
-    background-color: #fff;
+    background-color: #2DCE89;
     background-clip: padding-box;
 
     flex: 0 1 auto;
